Bug 1747939 - Relax dispatch_ack assertion to handle ShutdownWithTimeout, r=jstutte, a=dsmith

Differential Revision: https://phabricator.services.mozilla.com/D135084